@@ -17,11 +17,9 @@ CPPFLAGS := $(shell dpkg-buildflags --get CPPFLAGS)
 LDFLAGS := $(shell dpkg-buildflags --get LDFLAGS) \
            $(shell pkg-config --libs libbsd-overlay)
 
-# GNU/kFreeBSD already have off_t 64bit. It must not be enabled,
-# as it would change size of ino_t
+# Note: GNU/kFreeBSD already has a 64-bit off_t. It must not be enabled,
+# as it would change size of ino_t.
 ifneq (kfreebsd,$(DEB_HOST_ARCH_OS))
-# really only on other systems, as GNU/kFreeBSD already have off_t 64bit
-# on GNU/kFreeBSD it must not be enabled, as it would change size of ino_t
 CFLAGS += -D_FILE_OFFSET_BITS=64
 endif
 
