@@ -15,6 +15,8 @@ ufsutils (8.2-4) UNRELEASED; urgency=low
   * Add install and install-indep targets for consistency.
   * Add -Werror=implicit-function-declaration to build flags.
   * Remove unneeded debian/ufsutils.dirs file.
+  * Reword warning about not enabling _FILE_OFFSET_BITS=64 on GNU/kFreeBSD,
+    fix typos, and remove repeated text.
 
  -- Robert Millan <rmh@debian.org>  Thu, 08 Dec 2011 13:40:32 +0100
 
